--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+digest = "0.10.7"
 inquire = "0.6.2"
+sha2 = "0.10.7"
 socket2 = "0.5.3"
 
 [[bin]]
